snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.9-win__src__bin__fstreplace-main.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.9-win/src/bin/fstreplace-main.cc",
    ),
    start_line: 1,
    end_line: 91,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "Cleanup",
            ),
            start_line: 21,
            end_line: 26,
            kind: Function,
            spaces: [],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 1,
                    closure_nargs: 0,
                    fn_nargs_sum: 1,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 1,
                    closure_nargs_min: 0,
                    fn_nargs_max: 1,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 0,
                    exit_sum: 0,
                    total_space_functions: 1,
                    exit_min: 0,
                    exit_max: 0,
                },
                cognitive: Stats {
                    structural: 0,
                    structural_sum: 0,
                    structural_min: 0,
                    structural_max: 0,
                    nesting: 0,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 2.0,
                    cyclomatic: 2.0,
                    n: 1,
                    cyclomatic_max: 2.0,
                    cyclomatic_min: 2.0,
                },
                halstead: Stats {
                    u_operators: 14,
                    operators: 21,
                    u_operands: 7,
                    operands: 10,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 20,
                        end: 25,
                        unit: false,
                        sloc_min: 6,
                        sloc_max: 6,
                    },
                    ploc: Ploc {
                        lines: {
                            24,
                            21,
                            23,
                            20,
                            25,
                            22,
                        },
                        ploc_min: 6,
                        ploc_max: 6,
                    },
                    cloc: Cloc {
                        only_comment_lines: 0,
                        code_comment_lines: 0,
                        comment_line_end: None,
                        cloc_min: 0,
                        cloc_max: 0,
                    },
                    lloc: Lloc {
                        logical_lines: 2,
                        lloc_min: 2,
                        lloc_max: 2,
                    },
                    space_count: 1,
                    blank_min: 0,
                    blank_max: 0,
                },
                nom: Stats {
                    functions: 1,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 1,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 1,
                },
                mi: Stats {
                    halstead_length: 31.0,
                    halstead_vocabulary: 21.0,
                    halstead_volume: 136.16184010614157,
                    cyclomatic: 2.0,
                    sloc: 6.0,
                    comments_percentage: 0.0,
                },
                abc: Stats {
                    assignments: 0.0,
                    assignments_sum: 0.0,
                    assignments_min: 0.0,
                    assignments_max: 0.0,
                    branches: 0.0,
                    branches_sum: 0.0,
                    branches_min: 0.0,
                    branches_max: 0.0,
                    conditions: 0.0,
                    conditions_sum: 0.0,
                    conditions_min: 0.0,
                    conditions_max: 0.0,
                    space_count: 1,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.0,
                    class_wmc: 0.0,
                    interface_wmc: 0.0,
                    class_wmc_sum: 0.0,
                    interface_wmc_sum: 0.0,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: false,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: false,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 1,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 1,
            closure_nargs_max: 0,
            total_functions: 1,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 4,
            exit_sum: 4,
            total_space_functions: 1,
            exit_min: 0,
            exit_max: 4,
        },
        cognitive: Stats {
            structural: 7,
            structural_sum: 7,
            structural_min: 0,
            structural_max: 7,
            nesting: 0,
            total_space_functions: 1,
            boolean_seq: BoolSequence {
                boolean_op: Some(
                    349,
                ),
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 10.0,
            cyclomatic: 8.0,
            n: 2,
            cyclomatic_max: 8.0,
            cyclomatic_min: 2.0,
        },
        halstead: Stats {
            u_operators: 27,
            operators: 199,
            u_operands: 66,
            operands: 145,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 91,
                unit: true,
                sloc_min: 6,
                sloc_max: 6,
            },
            ploc: Ploc {
                lines: {
                    61,
                    55,
                    49,
                    43,
                    31,
                    25,
                    86,
                    80,
                    13,
                    74,
                    62,
                    38,
                    87,
                    20,
                    75,
                    8,
                    69,
                    57,
                    51,
                    45,
                    39,
                    33,
                    27,
                    21,
                    82,
                    15,
                    76,
                    9,
                    70,
                    58,
                    46,
                    40,
                    34,
                    28,
                    89,
                    22,
                    83,
                    16,
                    77,
                    71,
                    65,
                    59,
                    41,
                    35,
                    29,
                    90,
                    23,
                    17,
                    78,
                    11,
                    72,
                    66,
                    60,
                    54,
                    48,
                    42,
                    36,
                    30,
                    24,
                    85,
                    18,
                    79,
                    12,
                    73,
                    6,
                    67,
                },
                ploc_min: 6,
                ploc_max: 6,
            },
            cloc: Cloc {
                only_comment_lines: 9,
                code_comment_lines: 0,
                comment_line_end: Some(
                    64,
                ),
                cloc_min: 0,
                cloc_max: 0,
            },
            lloc: Lloc {
                logical_lines: 41,
                lloc_min: 2,
                lloc_max: 2,
            },
            space_count: 2,
            blank_min: 0,
            blank_max: 0,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 1,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 1,
            closures_min: 0,
            closures_max: 0,
            space_count: 2,
        },
        mi: Stats {
            halstead_length: 344.0,
            halstead_vocabulary: 93.0,
            halstead_volume: 2249.4706310211627,
            cyclomatic: 10.0,
            sloc: 91.0,
            comments_percentage: 0.0989010989010989,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 2,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
